item/.err
234_1.c: In function 'bool checkPoint(ListNode*)':
234_1.c:13:18: error: 'NULL' was not declared in this scope
     if (point != NULL){
                  ^~~~
234_1.c:13:18: note: 'NULL' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
234_1.c:1:1:
+#include <cstddef>
 // 回文链表
234_1.c:13:18:
     if (point != NULL){
                  ^~~~
234_1.c:14:30: error: invalid use of incomplete type 'struct ListNode'
         if (!checkPoint(point->next)) return false;// 这里要对回溯的结果进行判断
                              ^~
234_1.c:10:8: note: forward declaration of 'struct ListNode'
 struct ListNode* ptr;
        ^~~~~~~~
234_1.c:15:18: error: invalid use of incomplete type 'struct ListNode'
         if (point->val != ptr->val) return false;
                  ^~
234_1.c:10:8: note: forward declaration of 'struct ListNode'
 struct ListNode* ptr;
        ^~~~~~~~
234_1.c:15:30: error: invalid use of incomplete type 'struct ListNode'
         if (point->val != ptr->val) return false;
                              ^~
234_1.c:10:8: note: forward declaration of 'struct ListNode'
 struct ListNode* ptr;
        ^~~~~~~~
234_1.c:16:18: error: invalid use of incomplete type 'struct ListNode'
         ptr = ptr->next;
                  ^~
234_1.c:10:8: note: forward declaration of 'struct ListNode'
 struct ListNode* ptr;
        ^~~~~~~~
